--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,13 +1,19 @@
 @import url('./colors/light.css');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: var(--blue-12);
     margin: 0;
+    padding: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     flex-direction: column;
+    box-sizing: border-box;
 }
