--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -7,12 +7,53 @@ input {
 }
 
 input[type="text"]:read-only {
-    background-color: red;
+    width:Fill 458px;
+    height: Fixed 48px;
+    border-radius:4px;
+    padding:8px;
+    border:1px;
+    color:  var(--gray-10);
+    border: var(--gray-10) solid 1px;
+    background-color:#FFFFFF;
+    
 }
 
-input[type="text"] {}
+input[type="sun-number"]{
+    width: Hug 178px;
+    height: Fixed 48px;
+    border-radius: 4px;
+    border:1px;
+    padding: 8px;
+    
 
-input[type="button"] {}
+}
+
+input[type="text"] {
+    width:Fill px;
+    margin-bottom: 200px;
+    margin-left: 40px;
+    gap:10px;
+    height: Fixed 48px;
+    border-radius:4px;
+    border:4px;
+    padding:8px;
+    border:1px;
+    border: var(--gray-10) solid 1px;
+    background-color:#FFFFFF;
+   
+}
+
+input[type="button"] {
+    width: 100%;
+    height:100%;
+    border-radius: 8px;
+    border:0px, 0px, 1px,0px;
+    padding:8px;
+    background-color:var(--blue-10);
+    color:#FFFFFF;
+    border:var(--blue-10);
+   
+}
 
 .box-button-icon {
     background-color: #fff;
