--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -7,8 +7,8 @@ input {
 }
 
 input[type="text"]:read-only {
-    width:Fill 458px;
-    height: Fixed 48px;
+    width: 100%;
+    height: 48px;
     border-radius:4px;
     padding:8px;
     border:1px;
@@ -24,30 +24,31 @@ input[type="sun-number"]{
     border-radius: 4px;
     border:1px;
     padding: 8px;
-    
-
 }
 
 input[type="text"] {
-    width:Fill px;
-    margin-bottom: 200px;
-    margin-left: 40px;
-    gap:10px;
-    height: Fixed 48px;
-    border-radius:4px;
-    border:4px;
-    padding:8px;
-    border:1px;
-    border: var(--gray-10) solid 1px;
+    width: 100%;
+    height: 48px;
+    padding: 8px;
+    border: 1px;
+    border-bottom: var(--gray-10) solid 1px;
     background-color:#FFFFFF;
-   
+    margin-right: 10px;
+    border: none;
+    border-bottom: 1px solid #A09FA6;
+    outline: none;
+    color: #22346E;
+    
 }
+input[type="text"]:focus {
+    border-bottom: 1px solid #1E90FF;
+}
+
 
 input[type="button"] {
     width: 100%;
-    height:100%;
+    height: 100%;
     border-radius: 8px;
-    border:0px, 0px, 1px,0px;
     padding:8px;
     background-color:var(--blue-10);
     color:#FFFFFF;
