--- a/public/css/buttons.css
+++ b/public/css/buttons.css
@@ -9,51 +9,58 @@ input {
 input[type="text"]:read-only {
     width: 100%;
     height: 48px;
-    border-radius:4px;
-    padding:8px;
-    border:1px;
-    color:  var(--gray-10);
+    border-radius: 4px;
+    padding: 8px;
+    border: 1px;
+    color: var(--gray-10);
     border: var(--gray-10) solid 1px;
-    background-color:#FFFFFF;
-    
+    background-color: #FFFFFF;
+
 }
 
-input[type="sun-number"]{
+input[type="sun-number"] {
     width: Hug 178px;
     height: Fixed 48px;
     border-radius: 4px;
-    border:1px;
+    border: 1px;
     padding: 8px;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="password"] {
     width: 100%;
     height: 48px;
     padding: 8px;
     border: 1px;
     border-bottom: var(--gray-10) solid 1px;
-    background-color:#FFFFFF;
+    background-color: #FFFFFF;
     margin-right: 10px;
     border: none;
     border-bottom: 1px solid #A09FA6;
     outline: none;
     color: #22346E;
-    
+
 }
-input[type="text"]:focus {
+
+input[type="text"]:focus,
+input[type="password"]:focus {
     border-bottom: 1px solid #1E90FF;
 }
 
 
-input[type="button"] {
-    width: 100%;
-    height: 100%;
+input[type="button"],
+input[type="submit"] {
+    width: 100% !important;
+    height: 2.5rem !important;
     border-radius: 8px;
-    padding:8px;
-    background-color:var(--blue-10);
-    color:#FFFFFF;
-    border:var(--blue-10);
-   
+    padding: 8px;
+    background-color: var(--blue-10);
+    color: #FFFFFF;
+    border: var(--blue-10);
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
 }
 
 .box-button-icon {
@@ -77,7 +84,8 @@ input[type="button"] {
     cursor: pointer;
 }
 
-.box-button-icon:active, .active{
+.box-button-icon:active,
+.active {
     border: transparent solid 1px;
     background-color: var(--blue-10);
     color: #fff;
