--- a/src/Views/User/style.css
+++ b/src/Views/User/style.css
@@ -1,8 +1,11 @@
-.header {
+.header{
     color: #22346E;
 }
+
 .patient-info-container {
     display: flex; 
+    gap: 10px;
+    margin-bottom: 10px;
 }
 
 .container-right{
@@ -13,38 +16,18 @@
     color: #A09FA6;
 }
 
-.patient-name{
-    color: #22346E;
-}
-
-.button-trash{
+/* .button-trash, .button-pencil{
     margin-right: 10px;
-}
-
-.button-pencil{
-    margin-right: 10px;
-}
-
-.input-bar-primary{
-    margin-right: 10px;
-    border: none;
-    border-bottom: 1px solid #A09FA6;
-    outline: none;
-    color: #22346E;
-}
-
-.input-bar-primary:focus{
-    border-bottom: 1px solid #1E90FF;
-}
-
+} */
 
 .input-bar-sus-number{
     border-radius: 4px;
     border: 1px solid #A09FA6;
-    width: 35%;
+    width: max-content;
     margin-right: 10px;
     color: #A09FA6;
     outline: none;
+    
 }
 
 .input-bar-patient-name{
@@ -55,21 +38,13 @@
     outline: none;
 }
 
-.button-user{
-    background: #1E90FF;
-    padding: 10px 0;
-    margin-top: 50%;
-    position: absolute;
+/* .button-user{
+    position: relative;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor:pointer;
     width: 95%;
-    text-align: center;
-}
+} */
 
 .input-spacing{
     margin-top: 16px;
