--- a/src/Views/Pacient/style.css
+++ b/src/Views/Pacient/style.css
@@ -5,6 +5,7 @@
 .patient-info-container {
     display: flex; 
     gap: 10px;
+    margin-bottom: 10px;
 }
 
 .container-right{
@@ -37,23 +38,14 @@
     outline: none;
 }
 
-.button-user{
-    background: #1E90FF;
-    padding: 10px 0;
-    margin-top: 50%;
-    position: absolute;
+/* .button-user{
+    position: relative;
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor:pointer;
     width: 95%;
-    text-align: center;
-}
+} */
 
 .input-spacing{
     margin-top: 16px;
 }
-
