Correção Posição Botão e ScrollBar | Funcionalidades de Apresentar e Criar Usuarios e Pacientes Finalizadas

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -36,8 +36,6 @@ body {
 
 .button-user {
     position: relative;
-    bottom: 20px; /* Ajuste conforme necessário */
-    left: 0;
     width: 100%;
     text-align: center; /* Centraliza o botão horizontalmente */
 }
@@ -45,8 +43,8 @@ body {
 .custom-scrollbar {
     position: relative;
     max-width: 100%; /* Define a largura máxima do contêiner como 100% da largura da janela de visualização */
-    overflow-x: auto; /* Adiciona uma barra de rolagem horizontal quando necessário */
-    /* overflow-y: none; */
+    overflow-y: auto; /* Adiciona uma barra de rolagem horizontal quando necessário */
+    overflow-x: hidden;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
